fishnet/tests/ui/component/state_init_outside_component.rs
use fishnet::component::prelude::*;

struct MyState {}

fn main() {
    state_init!(Arc<MyState>);
}
